@@ -3,6 +3,7 @@ Development version
 	* JsonSerializer marked as depricated
 	* Automatic download and build optional QJson dependency when needed
 	* Always build tests
+	* Default serializer moved to Qt 5.0 DataStream
 
 2012-10-20 Version 1.3.0
 	* Build system changed to cmake
